--- a/index.html
+++ b/index.html
@@ -35,25 +35,12 @@
         <button type="button" class="btn btn-primary" id="search-button">Search</button>
         <hr>
         <div id="city-buttons"></div>
-        <ul>
-            <!--this is the placeholder stuff for where the city buttons ought to go-->
-          <li>Spans 3 / 12 columns on large screens</li>
-          <li>Spans 4 / 12 columns on medium screens</li>
-          <li>Spans 12 / 12 (full-width) on smaller screens</li>
-        </ul>
       </div>
 
       <div class="col-12 col-md-8 col-xl-9">
-        <h3>Main Content</h3>
         <div id="daily"></div>
-        <div id="five-day"></div>
-        <h5>9/12 columns on large screens, 8/12 columns on medium screens, 12/12 (full-width) on small
-          screens</h5>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores blanditiis temporibus facilis cumque
-          corporis illum, in dolorum? Ad, sed nulla adipisci vel repellendus facere hic rerum veritatis quia
-          reprehenderit velit?
-        </p>
+        <div id="five-title-holder"></div>
+        <div class="row" id="five-day"></div>
       </div>
 
     </div>
