--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Enter your description here" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+  crossorigin="anonymous"
+/>
 
   <title>Bootstrap Layouts</title>
 </head>
@@ -31,8 +37,8 @@
 
       <div class="col-12 col-md-4 col-xl-3">
         <h3>Search for a City:</h3>
-        <input placeholder="San Diego" id="city-input">
-        <button type="button" class="btn btn-primary" id="search-button">Search</button>
+        <input placeholder="San Diego" id="city-input" class="form-control">
+        <button type="button" class="btn btn-primary btn-block" id="search-button">Search</button>
         <hr>
         <div id="city-buttons"></div>
       </div>
@@ -42,11 +48,12 @@
         <div id="five-title-holder"></div>
         <div class="row" id="five-day"></div>
       </div>
-
+      <div id="my_dataviz"></div>
     </div>
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
+  
 
 </body>
 
