--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 <body>
 
   <header class="container-fluid bg-dark text-light mb-5 p-3 menu-bar">
-    <div class="d-flex align-items-center">
-      <h1 style="text-align:center;">Weather Dashboard</h1>
-    </div>
+      <h1>Weather Dashboard</h1>
   </header>
 
   <section class="container my-5">
     <div class="row">
 
       <div class="col-12 col-md-4 col-xl-3">
+        <form id="search-form">
         <h3>Search for a City:</h3>
         <input placeholder="San Diego" id="city-input" class="form-control">
         <button type="button" class="btn btn-primary btn-block" id="search-button">Search</button>
+        </form>
         <hr>
         <div id="city-buttons"></div>
         <hr>
