get rid of clear all cities button, get high & low, get correct date

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <div class="col-12 col-md-4 col-xl-3">
         <form id="search-form">
         <h3>Search for a City:</h3>
-        <input placeholder="San Diego" id="city-input" class="form-control">
+        <input placeholder="Raleigh" id="city-input" class="form-control">
         <button type="button" class="btn btn-primary btn-block" id="search-button">Search</button>
         </form>
         <hr>
         <div id="city-buttons"></div>
-        <hr>
-        <button type="button" class="btn btn-light btn-block" id="clear-button">Clear all cities</button>
+        <!-- <hr>
+        <button type="button" class="btn btn-light btn-block" id="clear-button">Clear all cities</button> -->
       </div>
 
       <div class="col-12 col-md-8 col-xl-9" id="main-div">
